--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,6 @@
-<app-filmes-list></app-filmes-list>
+<header class="topbar">
+  <a routerLink="/filmes">Home</a>
+  <a routerLink="/filmes/novo">Cadastrar novo filme</a>
+</header>
+
+<router-outlet></router-outlet>
