--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,2 @@
-<header class="topbar">
-  <a routerLink="/filmes">Home</a>
-  <a routerLink="/filmes/novo">Cadastrar novo filme</a>
-</header>
-<router-outlet></router-outlet>
+<a routerLink="/filmes/novo">Cadastrar</a>
+<a [routerLink]="['/filmes', f.id, 'editar']">Editar</a>
